argo-deploy/deployment.yaml
# Simple deployment used to deploy and manage the app in nigelpoulton/getting-started-k8s:1.0
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sf-demo
  labels:
    app: sf-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sf-demo
  template:
    metadata:
      labels:
        app: sf-demo
    spec:
      terminationGracePeriodSeconds: 5
      containers:
        - name: sf-demo
          image: debojit/sf-demo-one:2.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8085
