argo-deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
#  namespace: myservice
  name: my-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: my-service.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ps-nodeport
                port:
                  number: 80
